fixed small alignment css mistake in user

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -189,9 +189,9 @@ h1.float-left {
 }
 
 #creationtime {
-  margin-left: 15px;
+  margin-left: auto;
 }
 
 #totalreviews {
-  margin-right: 15px;
+  margin-right: auto;
 }
